libcnb-test/tests/target/fixtures/buildpacks/compile-error/src/main.rs
fn main() {
    compile_error!("Example compile error");
}
